Tests can now run via Maven or IntelliJ.
- Added example test in move service.
- Reduced output of logs.
- Added fix for java module issue into test args in pom.
- Added 'no-frontend' Maven profile for quicker Java testing.